# ckd-architecture-app

./: .gitignore  01_parse_docs.ipynb  02_relationship_extraction.ipynb  03_build_graph.ipynb  Relationships.ipynb  draft-scraper.ipynb  pyproject.toml
data/: relationships.pkl  services_data_sc.json  whitepapers_data.json
scripts/: aws-services-scraper.py  aws-whitepapers-scraper.py  download-whitepapers.py  split_pdfs.py
