[tool.poetry]
name = "cdk-architecture-app"
version = "0.1.0"
description = ""
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
langchain = "^0.1.14"
playwright = {version = "^1.42.0", optional = true}
llama-index = {version = "^0.10.26", optional = true}
llama-parse = {version = "^0.4.0", optional = true}
langchain-openai = "^0.1.1"
pypdf2 = {version = "^3.0.1", optional = true}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.format.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
scraping = ["playwright"]
parse = ["llama-index", "llama-parse", "pypdf2"]

[tool.ruff]
line-length = 120